--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -12,14 +12,16 @@ categories = ["web-programming::http-server", "web-programming"]
 
 [features]
 unstable = []
-http-compat = ["http"]
+http-compat = ["http0"]
+http-compat-1 = ["http1"]
 serde = ["dep:serde"]
 
 [dependencies]
 encoding_rs = "0.8.33"
 futures-lite = "2.1.0"
 hashbrown = "0.14.3"
-http = { version = "1.0.0", optional = true }
+http1 = { version = "1", optional = true, package = "http" }
+http0 = { version = "0", optional = true, package = "http" }
 httparse = "1.8.0"
 httpdate = "1.0.3"
 log = "0.4.20"
