--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2.7.1
       - name: Generate code coverage
-        run: cargo +nightly tarpaulin --verbose --features smol,trillium-testing/smol --workspace --timeout 120 --out xml
+        run: cargo +nightly tarpaulin --verbose --features smol,trillium-testing/smol,serde --workspace --timeout 120 --out xml
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v3
         with:
