--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -25,6 +25,8 @@ url = "2.5.0"
 
 [dev-dependencies]
 env_logger = "0.10.1"
+querystrong = { version = "0.3.0", features = ["serde"] }
+trillium-api = { path = "../api" }
+trillium-http = { path = "../http", features = ["serde"] }
 trillium-logger = { path = "../logger" }
-trillium-rustls = { path = "../rustls" }
 trillium-smol = { path = "../smol" }
