--- a/websockets/Cargo.toml
+++ b/websockets/Cargo.toml
@@ -28,6 +28,7 @@ serde = { version = "1.0.193", optional = true }
 serde_json = { version = "1.0.108", optional = true }
 sha-1 = "0.10.1"
 stopper = "0.2.3"
+thiserror = "1.0.51"
 trillium = { path = "../trillium", version = "0.2.0" }
 trillium-http = { path = "../http", version = "0.3.8" }
 
@@ -39,6 +40,7 @@ broadcaster = "1.0.0"
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
 trillium-websockets = { features = ["json"], path = "." }
+trillium-logger = { path = "../logger" }
 env_logger = "0.10.1"
 
 [package.metadata.cargo-udeps.ignore]
