--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -10,8 +10,14 @@ readme = "../README.md"
 keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
+[features]
+default = ["upstream-random", "upstream-connection-counting"]
+upstream-random = ["dep:fastrand"]
+upstream-connection-counting = ["dep:trillium-server-common", "dep:fastrand"]
+
 [dependencies]
 event-listener = "4.0.1"
+fastrand = { version = "2.0.1", optional = true }
 full-duplex-async-copy = "0.1.0"
 futures-lite = "2.1.0"
 log = "0.4.20"
@@ -21,6 +27,7 @@ trillium = { path = "../trillium", version = "0.2.0"}
 trillium-client = { path = "../client", version = "0.4.9" }
 trillium-forwarding = { version = "0.2.1", path = "../forwarding" }
 trillium-http = { path = "../http", version = "0.3.8", features = ["unstable"] }
+trillium-server-common = { version = "0.4.5", path = "../server-common", optional = true }
 url = "2.5.0"
 
 [dev-dependencies]
