--- a/smol/Cargo.toml
+++ b/smol/Cargo.toml
@@ -20,6 +20,7 @@ trillium = { path = "../trillium", version = "0.2.0" }
 trillium-http = { path = "../http", version = "0.3.8" }
 trillium-macros = { version = "0.0.4", path = "../macros" }
 trillium-server-common = { path = "../server-common", version = "0.4.0" }
+url = "2.5.0"
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.17"
