fix docs workflow

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,5 +1,10 @@
 name: docs
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 on:
   push:
     branches:
@@ -9,25 +14,33 @@ jobs:
     name: build rustdocs and put them on github pages
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: nightly
-        components: rustfmt, clippy
-        override: true
-
-    - name: Build Documentation
-      run: >-
-        RUSTDOCFLAGS="-Z unstable-options --enable-index-page"
-        cargo +nightly doc
-        --no-deps
-        --all
-        --features smol,trillium-testing/smol
-
-    - name: Deploy Docs
-      uses: peaceiris/actions-gh-pages@364c31d33bb99327c77b3a5438a83a357a6729ad
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_branch: rustdocs
-        publish_dir: ./target/doc
-        force_orphan: true
+      - uses: actions/checkout@master
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          components: rustfmt, clippy
+          override: true
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2.2.1
+      - name: Build Documentation
+        run: >-
+          RUSTDOCFLAGS="-Z unstable-options --enable-index-page"
+          cargo +nightly doc
+          --no-deps
+          --all
+          --features smol,trillium-testing/smol
+          --all
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Fix permissions
+        run: |
+          chmod -c -R +rX "./target/doc" | while read line; do
+            echo "::warning title=Invalid file permissions automatically fixed::$line"
+          done
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./target/doc
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
