--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -11,18 +11,18 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [features]
-default = ["native-roots"]
+default = ["native-roots", "rustls/ring"]
 native-roots = ["dep:rustls-native-certs"]
 
 [dependencies]
-async-rustls = "0.4.0"
-log = "0.4.19"
-rustls = "0.21.0"
-rustls-native-certs = { version = "0.6.2", optional = true }
-rustls-pemfile = "1.0.2"
-rustls-webpki = "0.100.1"
+futures-rustls = "0.25.0"
+log = "0.4.20"
+rustls = "0.22.1"
+rustls-native-certs = { version = "0.7.0", optional = true }
+rustls-pemfile = "2.0.0"
+rustls-webpki = "0.102.0"
 trillium-server-common = { path = "../server-common", version = "0.4.7" }
-webpki-roots = "0.23"
+webpki-roots = "0.26"
 
 [dev-dependencies]
 env_logger = "0.10.1"
