trillium-client: Add client WebSocket support
Add a `websocket` feature gating support for client-side WebSocket
support. When set, provide methods on `trillium_client::Conn` that allow
upgrading to a `WebSocketConn`.

Usage:

```rust
let mut ws = client
    .get(url)
    .with_websocket_upgrade_headers()
    .await?
    .into_websocket()
    .await?;

ws.send_string(format!("Hello from a WebSocket client!")).await?;
```

Having this support natively in trillium allows reusing a connection
from the connection pool when establishing a WebSocket connection
(though of course the connection cannot go *back* to the pool). It also
allows using any headers and base already set on the client. And
finally, it allows clients to avoid some of async-tungstenite's
dependencies, such as async-tls and rustls, in favor of
trillium-client's dependencies.

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming", "web-programming::http-client"]
 
 [features]
+websocket = ["dep:trillium-websockets"]
 json = ["serde_json", "serde", "thiserror"]
 
 [dependencies]
@@ -20,6 +21,7 @@ httparse = "1.8.0"
 log = "0.4.20"
 size = "0.4.1"
 trillium-server-common = { version = "0.4.7", path = "../server-common" }
+trillium-websockets = { version = "0.6.2", path = "../websockets", optional = true }
 url = "2.5.0"
 mime = "0.3.17"
 serde_json = { version = "1.0.108", optional = true }
@@ -42,6 +44,7 @@ indoc = "2.0.4"
 pretty_assertions = "1.4.0"
 test-harness = "0.2.0"
 trillium = { path = "../trillium" }
+trillium-client = { path = ".", features = ["websocket"] }
 trillium-smol = { path = "../smol/" }
 trillium-testing = { path = "../testing" }
 
