--- a/websockets/Cargo.toml
+++ b/websockets/Cargo.toml
@@ -18,7 +18,7 @@ default = []
 json = ["serde_json", "serde"]
 
 [dependencies]
-async-tungstenite = "0.24.0"
+async-tungstenite = { version = "0.24.0", default-features = false }
 base64 = "0.21.5"
 fastrand = "2.0.1"
 futures-lite = "2.1.0"
@@ -34,6 +34,7 @@ trillium = { path = "../trillium", version = "0.2.13" }
 trillium-http = { path = "../http", version = "0.3.11" }
 
 [dev-dependencies]
+async-tungstenite = { version = "0.24.0", default-features = false, features = ["handshake"] }
 serde = { version = "1.0.193", features = ["derive"] }
 async-channel = "2.1.1"
 async-net = "2.0.0"
