--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -13,14 +13,15 @@ categories = ["web-programming::http-server", "web-programming"]
 [features]
 default = ["native-roots", "ring", "client", "server"]
 native-roots = ["dep:rustls-native-certs"]
+aws-lc-rs = ["rustls/aws_lc_rs"]
 ring = ["rustls/ring"]
 client = ["dep:webpki-roots"]
 server = ["dep:rustls-pemfile"]
 
 [dependencies]
-futures-rustls = "0.25.0"
+futures-rustls = { version = "0.25.1", default-features = false }
 log = "0.4.20"
-rustls = "0.22.1"
+rustls = { version = "0.22.1", default-features = false, features = ["tls12"] }
 rustls-native-certs = { version = "0.7.0", optional = true }
 rustls-pemfile = { version = "2.0.0", optional = true }
 trillium-server-common = { path = "../server-common", version = "0.4.7" }
@@ -33,5 +34,6 @@ test-harness = "0.2.0"
 trillium = { path = "../trillium" }
 trillium-client = { path = "../client" }
 trillium-native-tls = { path = "../native-tls" }
+trillium-rustls = { path = ".", features = ["ring"] }
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
