--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming", "web-programming::http-client"]
 
 [features]
-websocket = ["dep:trillium-websockets"]
+websockets = ["dep:trillium-websockets"]
 json = ["serde_json", "serde", "thiserror"]
 
 [dependencies]
@@ -44,7 +44,7 @@ indoc = "2.0.4"
 pretty_assertions = "1.4.0"
 test-harness = "0.2.0"
 trillium = { path = "../trillium" }
-trillium-client = { path = ".", features = ["websocket"] }
+trillium-client = { path = ".", features = ["websockets"] }
 trillium-smol = { path = "../smol/" }
 trillium-testing = { path = "../testing" }
 
