--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming", "web-programming::http-client"]
 
 [features]
-websockets = ["dep:trillium-websockets"]
+websockets = ["dep:trillium-websockets", "thiserror"]
 json = ["serde_json", "serde", "thiserror"]
 
 [dependencies]
