--- a/askama/Cargo.toml
+++ b/askama/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 askama = "0.12.1"
-mime-db = "1.7.0"
+mime_guess = "2.0.4"
 trillium = { path = "../trillium", version = "0.2.13" }
 
 [dev-dependencies]
