--- a/tera/Cargo.toml
+++ b/tera/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 log = "0.4.20"
-mime-db = "1.7.0"
+mime_guess = "2.0.4"
 serde = "1.0.193"
 tera = "1.19.1"
 trillium = { path = "../trillium", version = "0.2.13" }
