--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,8 +11,8 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming", "web-programming::http-client"]
 
 [features]
-websockets = ["dep:trillium-websockets", "thiserror"]
-json = ["serde_json", "serde", "thiserror"]
+websockets = ["dep:trillium-websockets", "dep:thiserror"]
+json = ["dep:serde_json", "dep:serde", "dep:thiserror"]
 
 [dependencies]
 encoding_rs = "0.8.33"
