--- a/trillium/Cargo.toml
+++ b/trillium/Cargo.toml
@@ -25,6 +25,7 @@ trillium-http = { path = "../http", version = "0.3.11" }
 [dev-dependencies]
 async-io = "2.3.1"
 fastrand = "2.0.1"
+test-harness = "0.2.0"
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
 
