--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["web-programming::http-server", "web-programming"]
 [features]
 default = ["forms"]
 forms = ["serde_urlencoded", "form_urlencoded"]
+url = ["dep:url"]
 
 [dependencies]
 form_urlencoded = { version = "1.2.1", optional = true }
@@ -25,12 +26,15 @@ serde_urlencoded = { version = "0.7.1", optional = true }
 thiserror = "1.0.52"
 trillium = { path = "../trillium", version = "0.2.13" }
 trillium-macros = { version = "0.0.5", path = "../macros" }
+url = { version = "2.5.0", optional = true }
 
 
 [dev-dependencies]
+async-io = "2.3.1"
 env_logger = "0.11.0"
 serde = { version = "1.0.193", features = ["derive"] }
 trillium-logger = { path = "../logger" }
 trillium-router = { path = "../router" }
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+trillium-api = { path = ".", features = ["url"] }
