--- a/trillium/Cargo.toml
+++ b/trillium/Cargo.toml
@@ -23,6 +23,7 @@ log = "0.4.20"
 trillium-http = { path = "../http", version = "0.3.13" }
 
 [dev-dependencies]
+async-channel = "2.1.1"
 async-io = "2.3.1"
 fastrand = "2.0.1"
 test-harness = "0.2.0"
