--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -32,6 +32,7 @@ async-channel = "2.1.1"
 trillium-macros = { version = "0.0.5", path = "../macros" }
 dashmap = "5.5.3"
 once_cell = "1.19.0"
+fastrand = "2.0.1"
 
 [dependencies.trillium-smol]
 path = "../smol"
