--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -9,5 +9,7 @@ afl = "0.14.3"
 arbitrary = "1.3.1"
 encoding_rs = "0.8.33"
 futures-io = "0.3.28"
-trillium-http = { version = "0.3.3", path = "../http", features = ["unstable"] }
+trillium-http = { version = "0.3.14", path = "../http", features = [
+        "unstable",
+] }
 trillium-testing = { version = "0.5.0", path = "../testing" }
