--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -11,29 +11,33 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [features]
-default = ["native-roots", "ring", "client", "server"]
-native-roots = ["dep:rustls-native-certs"]
-aws-lc-rs = ["rustls/aws_lc_rs"]
-ring = ["rustls/ring"]
+default = ["platform-verifier", "aws-lc-rs", "client", "server", "tls12"]
+aws-lc-rs = ["futures-rustls/aws-lc-rs"]
+fips = ["futures-rustls/fips"]
+ring = ["futures-rustls/ring"]
+tls12 = ["futures-rustls/tls12"]
 client = ["dep:webpki-roots"]
 server = ["dep:rustls-pemfile"]
+platform-verifier = ["dep:rustls-platform-verifier"]
+
+[dependencies.futures-rustls]
+version = "0.26"
+default-features = false
+features = ["logging"]
 
 [dependencies]
-futures-rustls = { version = "0.25.1", default-features = false }
-log = "0.4.20"
-rustls = { version = "0.22.1", default-features = false, features = ["tls12"] }
-rustls-native-certs = { version = "0.7.0", optional = true }
-rustls-pemfile = { version = "2.0.0", optional = true }
+log = "0.4.21"
+rustls-pemfile = { version = "2.1.1", optional = true }
+rustls-platform-verifier = { version = "0.3.0", optional = true }
 trillium-server-common = { path = "../server-common", version = "0.5.0" }
 webpki-roots = { version = "0.26", optional = true }
 
 [dev-dependencies]
-env_logger = "0.11.0"
+env_logger = "0.11.3"
 portpicker = "0.1.1"
 test-harness = "0.2.0"
 trillium = { path = "../trillium" }
 trillium-client = { path = "../client" }
 trillium-native-tls = { path = "../native-tls" }
-trillium-rustls = { path = ".", features = ["ring"] }
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
