chore: attempt to use release-plz's commit filtering regex

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,8 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    commit-message:
+      prefix: "deps:"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
