--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/checkout@v4
       - name: generate a cert for tls testing
         run: mkcert -install && mkcert localhost
+      - name: get-cmake
+        uses: lukka/get-cmake@v3.29.0
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2.7.3
       - name: Generate code coverage
