--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,6 +22,10 @@ jobs:
           override: true
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2.7.3
+
+      - name: get-cmake
+        uses: lukka/get-cmake@v3.29.0
+            
       - name: Build Documentation
         run: >-
           RUSTDOCFLAGS="-Z unstable-options --enable-index-page"
