--- a/async-std/Cargo.toml
+++ b/async-std/Cargo.toml
@@ -11,13 +11,12 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-async-std = { version = "1.12.0", package = "async-std" }
+async-std = "1.12.0"
 log = "0.4.20"
 trillium = { path = "../trillium", version = "0.2.17" }
 trillium-http = { path = "../http", version = "0.3.15" }
 trillium-macros = { version = "0.0.5", path = "../macros" }
 trillium-server-common = { path = "../server-common", version = "0.5.2" }
-url = "2.5.0"
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.17"
@@ -29,4 +28,3 @@ env_logger = "0.11.0"
 [dev-dependencies.async-std]
 version = "1.12.0"
 features = ["attributes"]
-package = "async-std"
