--- a/trillium/Cargo.toml
+++ b/trillium/Cargo.toml
@@ -29,6 +29,7 @@ fastrand = "2.0.1"
 test-harness = "0.2.0"
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+env_logger = "0.11.3"
 
 [package.metadata.cargo-udeps.ignore]
 development = ["trillium-testing"]
