--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -50,6 +50,9 @@ fastrand = "2.0.1"
 test-harness = "0.2.0"
 indoc = "2.0.4"
 serde_json = "1.0.108"
+async-channel = "2.2.0"
+async-executor = "1.9.1"
+core_affinity = "0.8.1"
 
 [dev-dependencies.tokio]
 version = "1.35.1"
