--- a/server-common/Cargo.toml
+++ b/server-common/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["web-programming::http-server", "web-programming"]
 async-channel = "2.2.0"
 async_cell = "0.2.2"
 futures-lite = "2.1.0"
+listenfd = "1.0.1"
 log = "0.4.20"
 pin-project-lite = "0.2.13"
 swansong = "0.3.0"
