--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -32,6 +32,7 @@ trillium-macros = { version = "0.0.6", path = "../macros" }
 dashmap = "5.5.3"
 once_cell = "1.19.0"
 fastrand = "2.0.1"
+env_logger = "0.11.3"
 log = "0.4.21"
 
 [dependencies.trillium-smol]
