--- a/trillium/Cargo.toml
+++ b/trillium/Cargo.toml
@@ -25,10 +25,11 @@ futures-lite = "2.1.0"
 async-channel = "2.1.1"
 async-io = "2.3.1"
 fastrand = "2.0.1"
-test-harness = "0.2.0"
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
 env_logger = "0.11.3"
+trillium-client = { path = "../client" }
+test-harness = "0.2.0"
 
 [package.metadata.cargo-udeps.ignore]
 development = ["trillium-testing"]
