--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["web-programming::http-server", "web-programming"]
 [features]
 default = ["platform-verifier", "aws-lc-rs", "client", "server", "tls12"]
 aws-lc-rs = ["futures-rustls/aws-lc-rs"]
+custom-crypto-provider = []
 fips = ["futures-rustls/fips"]
 ring = ["futures-rustls/ring"]
 tls12 = ["futures-rustls/tls12"]
@@ -28,7 +29,7 @@ features = ["logging"]
 [dependencies]
 log = "0.4.21"
 rustls-pemfile = { version = "2.1.1", optional = true }
-rustls-platform-verifier = { version = "0.3.0", optional = true }
+rustls-platform-verifier = { version = "0.3.1", optional = true }
 trillium-server-common = { path = "../server-common", version = "0.5.2" }
 webpki-roots = { version = "0.26", optional = true }
 
