--- a/smol/Cargo.toml
+++ b/smol/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-async-global-executor = "2.4.1"
+async-global-executor = { version = "2.4.1", features = ["async-io"] }
 async-io = "2.2.2"
 async-net = "2.0.0"
 futures-lite = "2.1.0"
