--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2.7.3
       - name: Generate code coverage
-        run: cargo +nightly tarpaulin --features smol,trillium-testing/smol,trillium-http/serde --workspace --timeout 120 --out xml
+        run: cargo +nightly tarpaulin
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v4
         with:
