--- a/async-std/Cargo.toml
+++ b/async-std/Cargo.toml
@@ -11,7 +11,8 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-async-std = "1.12.0"
+async-std = { version = "1.12.0", features = ["unstable"] }
+futures-lite = "2.3.0"
 log = "0.4.20"
 trillium = { path = "../trillium", version = "0.2.19" }
 trillium-http = { path = "../http", version = "0.3.16" }
