--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -22,7 +22,6 @@ default = []
 [dependencies]
 async-dup = "1.2.4"
 futures-lite = "2.1.0"
-portpicker = "0.1.1"
 trillium = { path = "../trillium", version = "0.2.19" }
 trillium-http = { path = "../http", version = "0.3.16" }
 trillium-server-common = { path = "../server-common", version = "0.5.2" }
@@ -33,6 +32,7 @@ trillium-macros = { version = "0.0.6", path = "../macros" }
 dashmap = "5.5.3"
 once_cell = "1.19.0"
 fastrand = "2.0.1"
+log = "0.4.21"
 
 [dependencies.trillium-smol]
 path = "../smol"
