--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -22,7 +22,6 @@ trillium-server-common = { path = "../server-common", version = "0.5.2" }
 [dependencies.tokio]
 version = "1.35.1"
 features = ["rt", "net", "fs", "rt-multi-thread", "time"]
-package = "tokio"
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.17"
@@ -30,4 +29,4 @@ signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
 
 [dev-dependencies]
 env_logger = "0.11.0"
-tokio = { version = "1.35.1", features = ["full"], package = "tokio" }
+tokio = { version = "1.35.1", features = ["full"] }
