--- a/smol/Cargo.toml
+++ b/smol/Cargo.toml
@@ -11,9 +11,11 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-async-global-executor = { version = "2.4.1", features = ["async-io"] }
+async-executor = "1.10.0"
+async-global-executor = {version = "2.4.1", features = ["async-io"] }
 async-io = "2.2.2"
 async-net = "2.0.0"
+async-task = "4.7.0"
 futures-lite = "2.1.0"
 log = "0.4.20"
 trillium = { path = "../trillium", version = "0.2.20" }
@@ -27,6 +29,8 @@ async-signal = "0.2.8"
 
 [dev-dependencies]
 env_logger = "0.11.0"
+tempfile = "3.10.1"
+test-harness = "0.2.0"
 trillium-client = { path = "../client" }
 trillium-logger = { path = "../logger" }
 trillium-testing = { path = "../testing" }
