--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -35,6 +35,7 @@ smartstring = "1.0.1"
 thiserror = "1.0.52"
 trillium-macros = { version = "0.0.6", path = "../macros" }
 swansong = "0.3.0"
+type-set = "0.3.0"
 
 [dev-dependencies]
 async-compat = "0.2.3"
