--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,11 +1,12 @@
-unstable_features = true
+comment_width = 100
 format_code_in_doc_comments = true
 format_macro_matchers = true
 format_strings = true
-imports_granularity = "Crate"
 group_imports = "One"
-wrap_comments = true
-comment_width = 100
+imports_granularity = "Crate"
+normalize_comments = true
 reorder_impl_items = true
+unstable_features = true
 use_field_init_shorthand = true
 version = "Two"
+wrap_comments = true
