--- a/smol/Cargo.toml
+++ b/smol/Cargo.toml
@@ -23,7 +23,7 @@ trillium-server-common = { path = "../server-common", version = "0.5.2" }
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.17"
-signal-hook-async-std = "0.2.2"
+async-signal = "0.2.8"
 
 [dev-dependencies]
 env_logger = "0.11.0"
